force-app/main/default/objects/Employee_Creation_Access__mdt/Employee_Creation_Access__mdt.object-meta.xml
<CustomObject>
    <label>Employee Creation Access</label>
    <pluralLabel>Employee Creation Access</pluralLabel>
</CustomObject>