force-app/main/default/objects/Employee_Creation_Access__mdt/fields/Allow_Desktop_Access__c.field-meta.xml
<CustomField>
    <fullName>Allow_Desktop_Access__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Desktop Access</label>
    <type>Checkbox</type>
</CustomField>