force-app/main/default/objects/Employee_Creation_Access__mdt/fields/Beat_Days_Limit__c.field-meta.xml
<CustomField>
    <fullName>Beat_Days_Limit__c</fullName>
    <label>Beat Days Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>