force-app/main/default/objects/Employee_Creation_Access__mdt/fields/Edit_Credit_Information__c.field-meta.xml
<CustomField>
    <fullName>Edit_Credit_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit Credit Information (Customer)</label>
    <type>Checkbox</type>
</CustomField>