force-app/main/default/objects/Employee_Creation_Access__mdt/fields/Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>Employee_Type__c</fullName>
    <label>Payroll</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>