force-app/main/default/objects/Employee_Creation_Access__mdt/fields/Hierarchy_Number__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Number__c</fullName>
    <label>Hierarchy Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>