force-app/main/default/objects/Employee_Creation_Access__mdt/fields/Map_Executive_In_Product_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Map_Executive_In_Product_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Map Executive (Customer Product Mapping)</label>
    <type>Checkbox</type>
</CustomField>