force-app/main/default/objects/Employee_Creation_Access__mdt/fields/Non_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Non_Payroll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Non-Payroll Employee</label>
    <type>Checkbox</type>
</CustomField>