force-app/main/default/objects/Employee_Creation_Access__mdt/fields/Payroll__c.field-meta.xml
<CustomField>
    <fullName>Payroll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Payroll Employee</label>
    <type>Checkbox</type>
</CustomField>