force-app/main/default/objects/Employee_Creation_Access__mdt/fields/Required_Approvers__c.field-meta.xml
<CustomField>
    <fullName>Required_Approvers__c</fullName>
    <label>Required Approvers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>