force-app/main/default/objects/Employee_Creation_Access__mdt/fields/Show_Reportee_View__c.field-meta.xml
<CustomField>
    <fullName>Show_Reportee_View__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Reportee View</label>
    <type>Checkbox</type>
</CustomField>